# Cmage_processing

./: .gitignore  CMakeLists.txt  README.md
front/: index.html  scripts.js
include/: image.h  server.h  transform.h
include/filters/: filters.h
include/image/: image.h
include/server/: server.h
include/transform/: colors.h  geometry.h
include/utils/: matrix.h
src/: image.c  main.c  server.c  transform.c
src/filters/: filters.c
src/image/: image.c
src/server/: server.c
src/transform/: colors.c  geometry.c
src/utils/: matrix.c
